<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ExercisesDatabaseActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercisesDatabaseActivityTitle"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:gravity="center_horizontal"
        android:textSize="40sp"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addExerciseButtonText"
        android:layout_marginTop="10dp"
        android:onClick="addExerciseClicked"
        android:id="@+id/addExerciseButton"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/removeExerciseButtonText"
        android:onClick="removeExerciseClicked"
        android:id="@+id/removeExerciseButton"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/restoreDatabaseButtonText"
        android:onClick="restoreDatabaseClicked"
        android:id="@+id/restoreDatabaseButton"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/exercisesListView"
        android:layout_marginTop="10dp"/>
</LinearLayout>